add complex divison questions

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>math</title>
 </head>
 <body>
-    <div id="math">
-
-    </div>
     <div>
         <div class="center">
             <h1 id="questionLabel">[question label]</h1>
@@ -26,15 +23,12 @@
         </div>
 
         <div class="center" style="margin-top: -40px;">
-            <h1 id="answers_a">A.</h1>
-        </div>
-        <div class="center" style="margin-top: -40px;">
+            <h1 id="answers_a" style="margin-right: 50px;">A.</h1>
             <h1 id="answers_b">B.</h1>
         </div>
+        <br>
         <div class="center" style="margin-top: -40px;">
-            <h1 id="answers_c">C.</h1>
-        </div>
-        <div class="center" style="margin-top: -40px;">
+            <h1 id="answers_c" style="margin-right: 50px;">C.</h1>
             <h1 id="answers_d">D.</h1>
         </div>
 
