--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.3.2/math.js"></script> 
     <title>math</title>
 </head>
 <body>
+    <!-- <td>
+        <table class="matrix">
+            <tbody><tr>
+            <td>2</td>
+            <td>5</td>
+            <td>3</td><td>
+            </td></tr>
+            <tr>
+            <td>4</td>
+            <td>7</td>
+            <td>1</td>
+            </tr>
+            </tbody>
+        </table>
+    </td> -->
     <div>
         <div class="center">
             <h1 id="questionLabel">[question label]</h1>
